--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,8 @@
 		"typescript": "^5.7.3"
 	},
 	"dependencies": {
+		"@aws-sdk/client-cognito-identity-provider": "^3.738.0",
+		"aws-jwt-verify": "^5.0.0",
 		"body-parser": "^1.20.3",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.7",
